syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message HeartbeatRequest {
	OpDevice device = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.Int32Value startup_session = 2;
}
